overflow x fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
     transition: all 0.3s ease-in-out;
+    overflow-x: hidden;
 }
 .App{
     display: flex;
